// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBarMobileSideMenu renders "Not logged in" correctly 1`] = `
"<Blueprint4.Drawer isOpen={true} position=\\"left\\" onClose={[Function: onClose]} title=\\"\\" className=\\"bp4-dark\\" canOutsideClickClose={true} style={{...}}>
  <NavLink className={[Function: className]} to=\\"/githubassessments\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"briefcase\\" />
    <div className=\\"navbar-button-text\\">
      Classroom
    </div>
  </NavLink>
</Blueprint4.Drawer>"
`;

exports[`NavigationBarMobileSideMenu renders correctly when logged in (no course selected) 1`] = `
"<Blueprint4.Drawer isOpen={true} position=\\"left\\" onClose={[Function: onClose]} title=\\"\\" className=\\"bp4-dark\\" canOutsideClickClose={true} style={{...}}>
  <NavLink className={[Function: className]} to=\\"/githubassessments\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"briefcase\\" />
    <div className=\\"navbar-button-text\\">
      Classroom
    </div>
  </NavLink>
  <NavLink className={[Function: className]} to=\\"/sicpjs/\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"book\\" />
    <div className=\\"navbar-button-text\\">
      SICP JS
    </div>
  </NavLink>
</Blueprint4.Drawer>"
`;

exports[`NavigationBarMobileSideMenu renders correctly when logged in (with course selected) 1`] = `
"<Blueprint4.Drawer isOpen={true} position=\\"left\\" onClose={[Function: onClose]} title=\\"\\" className=\\"bp4-dark\\" canOutsideClickClose={true} style={{...}}>
  <NavLink to=\\"/courses/1/missions\\" className={[Function: className]} onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"flame\\" />
    <div>
      Missions
    </div>
    <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
  </NavLink>
  <NavLink to=\\"/courses/1/quests\\" className={[Function: className]} onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"lightbulb\\" />
    <div>
      Quests
    </div>
    <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
  </NavLink>
  <NavLink to=\\"/courses/1/paths\\" className={[Function: className]} onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"predictive-analysis\\" />
    <div>
      Paths
    </div>
    <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
  </NavLink>
  <NavLink to=\\"/courses/1/contests\\" className={[Function: className]} onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"comparison\\" />
    <div>
      Contests
    </div>
    <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
  </NavLink>
  <NavLink to=\\"/courses/1/others\\" className={[Function: className]} onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"manual\\" />
    <div>
      Others
    </div>
    <NotificationBadge notificationFilter={[Function (anonymous)]} disableHover={true} />
  </NavLink>
  <NavLink className={[Function: className]} to=\\"/courses/1/sourcecast\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"music\\" />
    <div>
      Sourcecast
    </div>
  </NavLink>
  <NavLink className={[Function: className]} to=\\"/playground\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"code\\" />
    <div>
      Playground
    </div>
  </NavLink>
  <NavLink className={[Function: className]} to=\\"/githubassessments\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"briefcase\\" />
    <div className=\\"navbar-button-text\\">
      Classroom
    </div>
  </NavLink>
  <NavLink className={[Function: className]} to=\\"/sicpjs/\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"book\\" />
    <div className=\\"navbar-button-text\\">
      SICP JS
    </div>
  </NavLink>
  <NavLink className={[Function: className]} to=\\"/courses/1/achievements\\" onClick={[Function: onClose]}>
    <Blueprint4.Icon icon=\\"mountain\\" />
    <div>
      Achievements
    </div>
  </NavLink>
</Blueprint4.Drawer>"
`;
